--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "electron-is-dev": "^1.0.1",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
     "react-scripts": "2.1.3"
@@ -18,10 +19,10 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "electron": "electron .",
-    "pack": "build --dir",
-    "dist": "build"
+    "pack": "build -c.extraMetadata.main=src/electron/main.js --dir",
+    "dist": "build -c.extraMetadata.main=src/electron/main.js"
   },
-  "main": "public/electron.js",
+  "main": "src/electron/main.js",
   "homepage": "./",
   "eslintConfig": {
     "extends": "react-app"
@@ -34,13 +35,15 @@
   ],
   "devDependencies": {
     "antd": "^3.12.3",
-    "electron-builder": "^20.38.5", 
-    "electron": "^4.0.1"
+    "electron": "^4.0.1",
+    "electron-builder": "^20.38.5",
+    "electron-devtools-installer": "^2.2.4"
   },
   "build": {
     "files": [
       "build/**/*",
-      "node_modules/**/*"
+      "node_modules/**/*",
+      "src/electron/**/*"
     ],
     "directories": {}
   }
