--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "eject": "react-scripts eject",
     "electron": "electron .",
     "pack": "electron-builder -c.extraMetadata.main=src/electron/main.js --dir",
-    "dist": "electron-builder -c.extraMetadata.main=src/electron/main.js -wl",
+    "dist": "electron-builder -c.extraMetadata.main=src/electron/main.js",
     "release": "yarn build && yarn dist"
   },
   "main": "src/electron/main.js",
