--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "electron-is-dev": "^1.0.1",
     "immutability-helper": "^3.0.0",
     "key-mirror": "^1.0.1",
+    "node-sass": "^4.11.0",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
     "react-redux": "^6.0.0",
