--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-redux": "^6.0.0",
     "react-scripts": "2.1.3",
     "redux": "^4.0.1",
+    "redux-thunk": "^2.3.0",
     "reselect": "^4.0.0",
     "uuid": "^3.3.2"
   },
