linux build targets

--- a/package.json
+++ b/package.json
@@ -54,6 +54,13 @@
       "node_modules/**/*",
       "src/electron/**/*"
     ],
-    "directories": {}
+    "directories": {},
+    "linux": {
+      "target": [
+        "deb",
+        "AppImage",
+        "snap"
+      ]
+    }
   }
 }
