--- a/package.json
+++ b/package.json
@@ -29,8 +29,8 @@
     "electron": "electron .",
     "pack": "electron-builder -c.extraMetadata.main=src/electron/main.js --dir",
     "dist": "electron-builder -c.extraMetadata.main=src/electron/main.js",
-    "publish-github": "./publish.sh",
-    "release": "yarn build && yarn dist && yarn publish-github"
+    "release": "yarn build && yarn dist",
+    "github-release": "./publish.sh"
   },
   "main": "src/electron/main.js",
   "homepage": "./",
