--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "redux": "^4.0.1",
     "redux-thunk": "^2.3.0",
     "reselect": "^4.0.0",
+    "system-font-families": "^0.4.1",
     "uuid": "^3.3.2"
   },
   "scripts": {
