--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "email": "paul.laffitte@epitech.eu"
   },
   "description": "A cards editor",
-  "version": "0.2.1-follow-up-2",
+  "version": "1.0.0",
   "private": true,
   "dependencies": {
     "electron-is-dev": "^1.0.1",
