--- a/semver.yml
+++ b/semver.yml
@@ -1,6 +1,6 @@
 # semver config file -- https://github.com/paullaffitte/semver
 
-version: 0.2.1-follow-up-2
+version: 1.0.0
 files:
   README.md: 'latest \([^\(]*\)'
   package.json: '"version": "[^"]*",'
