--- a/semver.yml
+++ b/semver.yml
@@ -1,7 +1,8 @@
 # semver config file -- https://github.com/paullaffitte/semver
 
-version: 1.1.0
+version: 1.2.0
 files:
   README.md: 'latest \([^\(]*\)'
   package.json: '"version": "[^"]*",'
+  example/deck.json: '"version": "[^"]*",'
   src/state/initialState.js: "version: '[^\"]*'"
