--- a/package.json
+++ b/package.json
@@ -13,8 +13,9 @@
     "immutability-helper": "^3.0.0",
     "key-mirror": "^1.0.1",
     "node-sass": "^4.11.0",
-    "react": "^16.7.0",
-    "react-dom": "^16.7.0",
+    "react": "^16.8.0",
+    "react-beautiful-dnd": "^11.0.3",
+    "react-dom": "^16.8.0",
     "react-redux": "^6.0.0",
     "react-scripts": "2.1.3",
     "redux": "^4.0.1",
@@ -70,11 +71,12 @@
       ]
     },
     "win": {
-      "target":
-        {
-          "target": "nsis",
-          "arch": [ "x64" ]
-        }
+      "target": {
+        "target": "nsis",
+        "arch": [
+          "x64"
+        ]
+      }
     },
     "nsis": {
       "differentialPackage": false
