--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "private": true,
   "dependencies": {
     "electron-is-dev": "^1.0.1",
+    "electron-settings": "^3.2.0",
     "github-release-cli": "^1.0.1",
     "i18next": "^17.0.3",
     "immutability-helper": "^3.0.0",
